# ideonomy

./: .gitignore  AFFORDANCE.md  AGENTS.md  CYCLES.md  ORGANON.md  PREMIER_SKILLS.md  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: canonicality.md  gunkel.md  oracle_review_gpt55pro.md  residue-ideonomy.json
ideonomy/: __init__.py  cycles.py  cycles_demo.py  demo.py  divisions.py  draw.py  loop.py  models.py  operators.py  primitives.py  residue.py  triangulate.py
skills/: README.md
skills/audit-the-oracle-coverage/: SKILL.md
skills/build-the-oracle-before-the-answer/: SKILL.md
skills/carry-the-residue-forward-across-sessions/: SKILL.md
skills/coin-the-missing-concept/: SKILL.md
skills/compute-the-smallest-nontrivial-case/: SKILL.md
skills/design-the-mechanism-from-the-desired-equilibrium/: SKILL.md
skills/enumerate-discriminating-alternatives/: SKILL.md
skills/localize-then-glue/: SKILL.md
skills/preserve-the-target/: SKILL.md
skills/prove-the-coverage-denominator/: SKILL.md
skills/reframe-until-it-dissolves/: SKILL.md
skills/refute-your-own-answer-blind/: SKILL.md
skills/route-to-the-right-move/: SKILL.md
skills/triangulate-without-oracle/: SKILL.md
tests/: test_consistency.py  test_cycles.py  test_draw.py  test_loop.py  test_models.py  test_residue.py  test_triangulate.py
