[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ideonomy"
version = "0.2.0"
description = "Computational ideonomy: Gunkel's science of ideas as inference-time cognitive machinery — the organon, the respiratory engine, and 14 gated agent skills"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Xyra Sinclair" }]
keywords = [
  "ideonomy", "gunkel", "agents", "llm", "cognition",
  "taxonomy", "mdl", "skills", "epistemics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/XyraSinclair/ideonomy"
Source = "https://github.com/XyraSinclair/ideonomy"
Issues = "https://github.com/XyraSinclair/ideonomy/issues"

[tool.setuptools.packages.find]
include = ["ideonomy*"]
